--- a/WebContent/livro/livro/index.xhtml
+++ b/WebContent/livro/livro/index.xhtml
@@ -6,228 +6,233 @@
 	xmlns:f="http://java.sun.com/jsf/core"
 	xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:p="http://primefaces.org/ui">
-<f:metadata>
-	<f:event type="preRenderView" listener="#{livroBean.prepararListagens}" />
-</f:metadata>
 <ui:composition template="/template/masterTemplate.xhtml">
-	<ui:composition template="/template/masterTemplate.xhtml">
-		<ui:param name="pageTitle" value="Gerenciar Livros"></ui:param>
-		<ui:define name="content">
-			<h:form id="form" prependId="false">
-				<p:panel id="panel" header="Registro" toggleable="true">
-					<p:wizard widgetVar="wiz" nextLabel="Proximo" backLabel="Anterior"
-						update="">
-						<p:tab id="livro" title="Livro">
-							<p:panel header="Livro Detalhe">
-								<h:panelGrid columns="2" cellpadding="10">
-									<h:outputText value="Titulo:"></h:outputText>
-									<h:panelGroup>
-										<h:inputText id="tilulo" required="true" size="28"
-											value="#{livroBean.livroSelecionado.titulo}"></h:inputText>
-										<p:message for="tilulo"></p:message>
-									</h:panelGroup>
-									<h:outputText value="Autor:"></h:outputText>
-									<h:panelGroup>
-										<p:selectOneMenu id="autores"
-											value="#{livroBean.autorSelecionado}" style="width:200px"
-											panelStyle="width:190px;height:150px;overflow:scroll;">
-											<f:selectItems value="#{livroBean.listaAutores}"></f:selectItems>
-										</p:selectOneMenu>
-										<p:message for="autores"></p:message>
-									</h:panelGroup>
-									<h:outputText value="Assunto:"></h:outputText>
-									<h:panelGroup>
-										<p:selectOneMenu id="assuntos"
-											value="#{livroBean.assuntoSelecionado}" style="width:200px"
-											panelStyle="width:190px;height:150px;overflow:scroll;">
-											<f:selectItems value="#{livroBean.listaAssuntos}"></f:selectItems>
-										</p:selectOneMenu>
-										<p:message for="assuntos"></p:message>
-									</h:panelGroup>
-									<h:outputText value="Editora:"></h:outputText>
-									<h:panelGroup>
-										<p:selectOneMenu id="editoras"
-											value="#{livroBean.editoraSelecionada}" style="width:200px"
-											panelStyle="width:190px;height:150px;overflow:scroll;">
-											<f:selectItems value="#{livroBean.listaEditoras}"></f:selectItems>
-										</p:selectOneMenu>
-										<p:message for="editoras"></p:message>
-									</h:panelGroup>
-									<br style="clear: both" />
-								</h:panelGrid>
-							</p:panel>
-							<br />
-						</p:tab>
-						<p:tab id="itens" title="Itens">
-							<p:panel header="Item Novo">
-								<h:panelGrid columns="4" cellpadding="10">
-									<h:outputText value="Codigo"></h:outputText>
-									<h:panelGroup>
-										<h:inputText id="codigo" label="codigo"
-											value="#{livroBean.itemEditado.codigo}" required="true"></h:inputText>
-										<p:message for="codigo"></p:message>
-									</h:panelGroup>
-									<h:outputText value="Ano"></h:outputText>
-									<h:panelGroup>
-										<h:inputText id="ano" label="ano"
-											value="#{livroBean.itemEditado.ano}" required="true"></h:inputText>
-										<p:message for="ano"></p:message>
-									</h:panelGroup>
-									<h:outputText value="Edição"></h:outputText>
-									<h:panelGroup>
-										<h:inputText id="edicao" label="edição"
-											value="#{livroBean.itemEditado.edicao}" required="true"></h:inputText>
-										<p:message for="edicao"></p:message>
-									</h:panelGroup>
-									<h:outputText value="Cutter"></h:outputText>
-									<h:panelGroup>
-										<h:inputText id="cutter" label="cutter"
-											value="#{livroBean.itemEditado.cutter}" required="true"></h:inputText>
-										<p:message for="cutter"></p:message>
-									</h:panelGroup>
-									<p:commandButton value="Adicionar"
-										actionListener="#{livroBean.adicionarNovoItemLivro}"
-										update=":form:panel,:growl"></p:commandButton>
-								</h:panelGrid>
-							</p:panel>
-							<br />
-							<br />
-							<p:panel header="Itens Adicionados">
-								<p:dataTable var="li" emptyMessage="Sem itens adicionados."
-									value="#{livroBean.itensAdicionados}">
-									<p:column headerText="Codigo">
-										<h:outputText value="#{li.codigo}" />
-									</p:column>
-									<p:column headerText="Ano">
-										<h:outputText value="#{li.ano}" />
-									</p:column>
-									<p:column headerText="Edição">
-										<h:outputText value="#{li.edicao}" />
-									</p:column>
-									<p:column headerText="Cutter">
-										<h:outputText value="#{li.cutter}" />
-									</p:column>
-									<p:column headerText="Remover"
-										style="width:10%;text-align: center;">
-										<p:commandButton id="btnRemover" process="@this"
-											icon="ui-icon-trash" update=":form:panel"
-											actionListener="#{livroBean.removerItemLivro(li)}" />
-									</p:column>
-								</p:dataTable>
-							</p:panel>
-							<br />
-							<br />
-							<p:panel header="Itens Cadastrados"
-								visible="#{livroBean.livroSelecionado.existemItensCadastrados}">
-								<p:dataTable var="li" emptyMessage="Sem itens cadastrados"
-									value="#{livroBean.livroSelecionado.itens}">
-									<p:column headerText="Codigo">
-										<h:outputText value="#{li.codigo}" />
-									</p:column>
-									<p:column headerText="Ano">
-										<h:outputText value="#{li.ano}" />
-									</p:column>
-									<p:column headerText="Edição">
-										<h:outputText value="#{li.edicao}" />
-									</p:column>
-									<p:column headerText="Cutter">
-										<h:outputText value="#{li.cutter}" />
-									</p:column>
-								</p:dataTable>
-							</p:panel>
-							<br />
-							<br />
-							<h:panelGrid columns="2" style="float:right">
-								<p:commandButton id="btnSalvarAjax" value="Limpar"
-									style="margin-right:20px"
-									onclick="javascript:document.getElementById('btnLimpar').click()" />
-								<p:commandButton id="btnLimparAjax" value="Salvar"
-									style="float:right"
-									onclick="javascript:document.getElementById('btnSalvar').click()" />
+	<ui:param name="pageTitle" value="Gerenciar Livros"></ui:param>
+	<ui:define name="content">
+		<h:form id="form" prependId="false">
+			<p:panel id="panel" header="Registro" toggleable="true">
+				<p:wizard widgetVar="wiz" nextLabel="Proximo" backLabel="Anterior"
+					update="">
+					<p:tab id="livro" title="Livro">
+						<p:panel header="Livro Detalhe">
+							<h:panelGrid columns="2" cellpadding="10">
+								<h:outputText value="Titulo:"></h:outputText>
+								<h:panelGroup>
+									<h:inputText id="tilulo" required="true" size="28"
+										value="#{livroBean.livroSelecionado.titulo}"></h:inputText>
+									<p:message for="tilulo"></p:message>
+								</h:panelGroup>
+								<h:outputText value="Autor:"></h:outputText>
+								<h:panelGroup>
+									<p:selectOneMenu id="autores" required="true"
+										value="#{livroBean.autorSelecionado}" style="width:200px"
+										panelStyle="width:190px;height:150px;overflow:scroll;">
+										<f:selectItems value="#{livroBean.listaAutores}"></f:selectItems>
+									</p:selectOneMenu>
+									<p:message for="autores"></p:message>
+								</h:panelGroup>
+								<h:outputText value="Assunto:"></h:outputText>
+								<h:panelGroup>
+									<p:selectOneMenu id="assuntos" required="true"
+										value="#{livroBean.assuntoSelecionado}" style="width:200px"
+										panelStyle="width:190px;height:150px;overflow:scroll;">
+										<f:selectItems value="#{livroBean.listaAssuntos}"></f:selectItems>
+									</p:selectOneMenu>
+									<p:message for="assuntos"></p:message>
+								</h:panelGroup>
+								<h:outputText value="Editora:"></h:outputText>
+								<h:panelGroup>
+									<p:selectOneMenu id="editoras" required="true"
+										value="#{livroBean.editoraSelecionada}" style="width:200px"
+										panelStyle="width:190px;height:150px;overflow:scroll;">
+										<f:selectItems value="#{livroBean.listaEditoras}"></f:selectItems>
+									</p:selectOneMenu>
+									<p:message for="editoras"></p:message>
+								</h:panelGroup>
+								<br style="clear: both" />
 							</h:panelGrid>
-						</p:tab>
-					</p:wizard>
-				</p:panel>
-			</h:form>
-			<br />
-			<br />
-			<h:form id="grid" prependId="false">
-				<p:dataTable id="listagem" var="livro"
-					value="#{livroBean.livrosCadastrados}" paginator="true" rows="10"
-					emptyMessage="Não existem livros cadastrados."
-					paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
-					rowsPerPageTemplate="5,10,15,20,25,30,35,40,45,50">
-					<p:column headerText="Titulo">
-						<h:outputText value="#{livro.titulo}" />
-					</p:column>
-					<p:column headerText="Autor">
-						<h:outputText value="#{livro.autor.nome}" />
-					</p:column>
-					<p:column headerText="Editora">
-						<h:outputText value="#{livro.editora.nome}" />
-					</p:column>
-					<p:column headerText="Assunto">
-						<h:outputText value="#{livro.assunto.nome}" />
-					</p:column>
-					<p:column style="width:10%;text-align: center;" headerText="Ação">
-						<p:commandButton id="selectEdit" update=":form:panel"
-							actionListener="#{livroBean.prepararEditarLivro(livro.id)}"
-							icon="ui-icon-pencil" title="View">
-						</p:commandButton>
-						<p:commandButton id="selectButtonView" update=":display"
-							oncomplete="livroDialog.show()" icon="ui-icon-search"
-							actionListener="#{livroBean.prepararLivroDetalhe(livro.id)}"
-							title="View"></p:commandButton>
-					</p:column>
-				</p:dataTable>
-			</h:form>
-			<h:form prependId="false">
-				<p:commandButton id="btnSalvar" style="display:none" value="Salvar"
-					actionListener="#{livroBean.cadastrarLivro}"
-					update=":form,:growl,:grid"
-					oncomplete="wiz.loadStep(wiz.cfg.steps[0], true);" />
-				<p:commandButton id="btnLimpar" style="display:none" value="Limpar"
-					actionListener="#{livroBean.prepararNovoLivro}"
-					update=":form,:growl,:grid"
-					oncomplete="wiz.loadStep(wiz.cfg.steps[0], true);" />
-			</h:form>
-			<p:dialog header="Detalhes" widgetVar="livroDialog" resizable="false"
-				id="livroDlg" showEffect="fade" hideEffect="explode" modal="true">
-				<p:accordionPanel id="display" multiple="true">
-					<p:tab title="Livro">
-						<h:panelGrid columns="2" cellpadding="10" style="margin:0 auto;">
-							<h:outputText value="Titulo:" />
-							<h:outputText value="#{livroBean.livroDetalhe.titulo}" />
-
-							<h:outputText value="Editora:" />
-							<h:outputText value="#{livroBean.livroDetalhe.editora.nome}" />
-
-							<h:outputText value="Assunto:" />
-							<h:outputText value="#{livroBean.livroDetalhe.assunto.nome}" />
-
-							<h:outputText value="Autor:" />
-							<h:outputText value="#{livroBean.livroDetalhe.autor.nome}" />
+						</p:panel>
+						<br />
+					</p:tab>
+					<p:tab id="itens" title="Itens">
+						<p:panel header="Item Novo">
+							<h:panelGrid columns="4" cellpadding="10">
+								<h:outputText value="Codigo"></h:outputText>
+								<h:panelGroup>
+									<h:inputText id="codigo" label="codigo"
+										value="#{livroBean.itemEditado.codigo}" required="true"></h:inputText>
+									<p:message for="codigo"></p:message>
+								</h:panelGroup>
+								<h:outputText value="Ano"></h:outputText>
+								<h:panelGroup>
+									<h:inputText id="ano" label="ano"
+										value="#{livroBean.itemEditado.ano}" required="true"></h:inputText>
+									<p:message for="ano"></p:message>
+								</h:panelGroup>
+								<h:outputText value="Edição"></h:outputText>
+								<h:panelGroup>
+									<h:inputText id="edicao" label="edição"
+										value="#{livroBean.itemEditado.edicao}" required="true"></h:inputText>
+									<p:message for="edicao"></p:message>
+								</h:panelGroup>
+								<h:outputText value="Cutter"></h:outputText>
+								<h:panelGroup>
+									<h:inputText id="cutter" label="cutter"
+										value="#{livroBean.itemEditado.cutter}" required="true"></h:inputText>
+									<p:message for="cutter"></p:message>
+								</h:panelGroup>
+								<p:commandButton value="Adicionar"
+									actionListener="#{livroBean.adicionarNovoItemLivro}"
+									update=":form:panel,:growl"></p:commandButton>
+							</h:panelGrid>
+						</p:panel>
+						<br />
+						<br />
+						<p:panel header="Itens Adicionados">
+							<p:dataTable var="li" emptyMessage="Sem itens adicionados."
+								value="#{livroBean.itensAdicionados}">
+								<p:column headerText="Codigo">
+									<h:outputText value="#{li.codigo}" />
+								</p:column>
+								<p:column headerText="Ano">
+									<h:outputText value="#{li.ano}" />
+								</p:column>
+								<p:column headerText="Edição">
+									<h:outputText value="#{li.edicao}" />
+								</p:column>
+								<p:column headerText="Cutter">
+									<h:outputText value="#{li.cutter}" />
+								</p:column>
+								<p:column headerText="Remover"
+									style="width:10%;text-align: center;">
+									<p:commandButton id="btnRemover" process="@this"
+										icon="ui-icon-trash" update=":form:panel"
+										actionListener="#{livroBean.removerItemLivro(li)}" />
+								</p:column>
+							</p:dataTable>
+						</p:panel>
+						<br />
+						<br />
+						<p:panel header="Itens Cadastrados"
+							visible="#{livroBean.livroSelecionado.existemItensCadastrados}">
+							<p:dataTable var="li" emptyMessage="Sem itens cadastrados"
+								value="#{livroBean.livroSelecionado.itens}">
+								<p:column headerText="Codigo">
+									<h:outputText value="#{li.codigo}" />
+								</p:column>
+								<p:column headerText="Ano">
+									<h:outputText value="#{li.ano}" />
+								</p:column>
+								<p:column headerText="Edição">
+									<h:outputText value="#{li.edicao}" />
+								</p:column>
+								<p:column headerText="Cutter">
+									<h:outputText value="#{li.cutter}" />
+								</p:column>
+							</p:dataTable>
+						</p:panel>
+						<br />
+						<br />
+						<h:panelGrid columns="2" style="float:right">
+							<p:commandButton id="btnSalvarAjax" value="Limpar"
+								style="margin-right:20px"
+								onclick="javascript:document.getElementById('btnLimpar').click()" />
+							<p:commandButton id="btnLimparAjax" value="Salvar"
+								style="float:right"
+								onclick="javascript:document.getElementById('btnSalvar').click()" />
 						</h:panelGrid>
 					</p:tab>
-					<p:tab title="Itens">
-						<p:dataTable var="li" value="#{livroBean.livroDetalhe.itens}">
-							<p:column headerText="Codigo">
-								<h:outputText value="#{li.codigo}" />
-							</p:column>
-							<p:column headerText="Ano">
-								<h:outputText value="#{li.ano}" />
-							</p:column>
-							<p:column headerText="Edição">
-								<h:outputText value="#{li.edicao}" />
-							</p:column>
-							<p:column headerText="Cutter">
-								<h:outputText value="#{li.cutter}" />
-							</p:column>
-						</p:dataTable>
-					</p:tab>
-				</p:accordionPanel>
-			</p:dialog>
-		</ui:define>
-	</ui:composition>
+				</p:wizard>
+			</p:panel>
+		</h:form>
+		<br />
+		<br />
+		<h:form id="grid" prependId="false">
+			<p:dataTable id="listagem" var="livro"
+				value="#{livroBean.livrosCadastrados}" paginator="true" rows="10"
+				emptyMessage="Não existem livros cadastrados."
+				paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
+				rowsPerPageTemplate="5,10,15,20,25,30,35,40,45,50">
+				<p:column headerText="Titulo">
+					<h:outputText value="#{livro.titulo}" />
+				</p:column>
+				<p:column headerText="Autor">
+					<h:outputText value="#{livro.autor.nome}" />
+				</p:column>
+				<p:column headerText="Editora">
+					<h:outputText value="#{livro.editora.nome}" />
+				</p:column>
+				<p:column headerText="Assunto">
+					<h:outputText value="#{livro.assunto.nome}" />
+				</p:column>
+				<p:column style="width:10%;text-align: center;" headerText="Ação">
+					<p:commandButton id="selectEdit" update=":form:panel"
+						actionListener="#{livroBean.prepararEditarLivro(livro.id)}"
+						icon="ui-icon-pencil" title="View">
+					</p:commandButton>
+					<p:commandButton id="selectButtonView" update=":display"
+						oncomplete="livroDialog.show()" icon="ui-icon-search"
+						actionListener="#{livroBean.prepararLivroDetalhe(livro.id)}"
+						title="View"></p:commandButton>
+				</p:column>
+			</p:dataTable>
+		</h:form>
+		<h:form prependId="false">
+			<p:commandButton id="btnSalvar" style="display:none" value="Salvar"
+				actionListener="#{livroBean.cadastrarLivro}"
+				update=":form,:growl,:grid"
+				oncomplete="wiz.loadStep(wiz.cfg.steps[0], true);" />
+			<p:commandButton id="btnLimpar" style="display:none" value="Limpar"
+				actionListener="#{livroBean.prepararNovoLivro}"
+				update=":form,:growl,:grid"
+				oncomplete="wiz.loadStep(wiz.cfg.steps[0], true);" />
+		</h:form>
+		<p:dialog header="Detalhes" widgetVar="livroDialog" resizable="false"
+			id="livroDlg" showEffect="fade" hideEffect="explode" modal="true">
+			<p:accordionPanel id="display" multiple="true">
+				<p:tab title="Livro">
+					<h:panelGrid columns="2" cellpadding="10" style="margin:0 auto;">
+						<h:outputText value="Titulo:" />
+						<h:outputText value="#{livroBean.livroDetalhe.titulo}" />
+
+						<h:outputText value="Editora:" />
+						<h:outputText value="#{livroBean.livroDetalhe.editora.nome}" />
+
+						<h:outputText value="Assunto:" />
+						<h:outputText value="#{livroBean.livroDetalhe.assunto.nome}" />
+
+						<h:outputText value="Autor:" />
+						<h:outputText value="#{livroBean.livroDetalhe.autor.nome}" />
+					</h:panelGrid>
+				</p:tab>
+				<p:tab title="Itens">
+					<p:dataTable var="li" value="#{livroBean.livroDetalhe.itens}">
+						<p:column headerText="Codigo">
+							<h:outputText value="#{li.codigo}" />
+						</p:column>
+						<p:column headerText="Ano">
+							<h:outputText value="#{li.ano}" />
+						</p:column>
+						<p:column headerText="Edição">
+							<h:outputText value="#{li.edicao}" />
+						</p:column>
+						<p:column headerText="Cutter">
+							<h:outputText value="#{li.cutter}" />
+						</p:column>
+					</p:dataTable>
+				</p:tab>
+			</p:accordionPanel>
+		</p:dialog>
+		<h:form prependId="false">
+			<p:commandButton id="prepararListagem" update=":form"
+				style="display:none" actionListener="#{livroBean.prepararListagens}">
+			</p:commandButton>
+		</h:form>
+		<script>
+			$(document).ready(function() {
+				$("#prepararListagem").click();
+			});
+		</script>
+	</ui:define>
 </ui:composition>
 </html>
