--- a/WebContent/login/index.xhtml
+++ b/WebContent/login/index.xhtml
@@ -49,7 +49,7 @@
 							</h:panelGroup>
 							<h:outputText value="Senha" style="font-weight: bold;"></h:outputText>
 							<h:panelGroup>
-								<p:inputText id="senha" value="#{loginBean.senha}"
+								<p:inputText id="senha" type="password" value="#{loginBean.senha}"
 									required="true" styleClass="login-inp"></p:inputText>
 								<p:message for="senha"></p:message>
 							</h:panelGroup>
