--- a/WebContent/endereco/cidade/index.xhtml
+++ b/WebContent/endereco/cidade/index.xhtml
@@ -6,79 +6,81 @@
 	xmlns:f="http://java.sun.com/jsf/core"
 	xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:p="http://primefaces.org/ui">
-<f:metadata>
-	<f:event type="preRenderView"
-		listener="#{cidadeBean.prepararListagemPais}" />
-</f:metadata>
 <ui:composition template="/template/masterTemplate.xhtml">
-	<ui:composition template="/template/masterTemplate.xhtml">
-		<ui:param name="pageTitle" value="Gerenciar Cidades"></ui:param>
-		<ui:define name="content">
-			<h:form id="form">
-				<p:panel id="panel" header="Registro" toggleable="true">
-					<p:focus context="panel" />
-					<h:panelGrid columns="2" cellpadding="5">
-						<h:outputText value="Nome:"></h:outputText>
-						<h:panelGroup>
-							<p:inputText id="cidade-name" label="nome" size="40"
-								required="true" requiredMessage="Por favor, insira o nome."
-								value="#{cidadeBean.cidadeSelecionada.nome}">
-							</p:inputText>
-							<p:message for="cidade-name" />
-						</h:panelGroup>
-						<h:outputText value="Pais:"></h:outputText>
-						<p:selectOneMenu id="city" value="#{cidadeBean.paisSelecionado}"
-							required="true">
-							<f:selectItems value="#{cidadeBean.listaPais}" />
-							<p:ajax update="listaEsdadosFiltrados"
-								listener="#{cidadeBean.valueChangePais}" event="change" />
-						</p:selectOneMenu>
-						<h:outputText value="Estado:"></h:outputText>
-						<p:selectOneMenu id="listaEsdadosFiltrados" required="true"
-							value="#{cidadeBean.estadoSelecionado}">
-							<f:selectItems value="#{cidadeBean.listaEsdados}" />
-						</p:selectOneMenu>
-						<p:commandButton actionListener="#{cidadeBean.salvarCidade}"
-							update=":grid:listagem,:growl" value="Salvar"></p:commandButton>
-						<p:commandButton
-							onclick="document.getElementById('limparButton').click()"
-							value="Limpar"></p:commandButton>
-					</h:panelGrid>
-					<br style="clear: both;" />
-				</p:panel>
-			</h:form>
-			<br />
-			<br />
-			<h:form id="grid">
-				<p:dataTable id="listagem" var="cidade"
-					value="#{cidadeBean.cidadesCadastradas}" paginator="true" rows="10"
-					emptyMessage="Não existem cidades cadastradas."
-					paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
-					rowsPerPageTemplate="5,10,15,20,25,30,35,40,45,50">
+	<ui:param name="pageTitle" value="Gerenciar Cidades"></ui:param>
+	<ui:define name="content">
+		<h:form id="form">
+			<p:panel id="panel" header="Registro" toggleable="true">
+				<p:focus context="panel" />
+				<h:panelGrid columns="2" cellpadding="5">
+					<h:outputText value="Nome:"></h:outputText>
+					<h:panelGroup>
+						<p:inputText id="cidade-name" label="nome" size="40"
+							required="true" requiredMessage="Por favor, insira o nome."
+							value="#{cidadeBean.cidadeSelecionada.nome}">
+						</p:inputText>
+						<p:message for="cidade-name" />
+					</h:panelGroup>
+					<h:outputText value="Pais:"></h:outputText>
+					<p:selectOneMenu id="city" value="#{cidadeBean.paisSelecionado}"
+						required="true">
+						<f:selectItems value="#{cidadeBean.listaPais}" />
+						<p:ajax update="listaEsdadosFiltrados"
+							listener="#{cidadeBean.valueChangePais}" event="change" />
+					</p:selectOneMenu>
+					<h:outputText value="Estado:"></h:outputText>
+					<p:selectOneMenu id="listaEsdadosFiltrados" required="true"
+						value="#{cidadeBean.estadoSelecionado}">
+						<f:selectItems value="#{cidadeBean.listaEsdados}" />
+					</p:selectOneMenu>
+					<p:commandButton actionListener="#{cidadeBean.salvarCidade}"
+						update=":form,:grid:listagem,:growl" value="Salvar"></p:commandButton>
+					<p:commandButton
+						onclick="document.getElementById('limparButton').click()"
+						value="Limpar"></p:commandButton>
+				</h:panelGrid>
+				<br style="clear: both;" />
+			</p:panel>
+		</h:form>
+		<br />
+		<br />
+		<h:form id="grid">
+			<p:dataTable id="listagem" var="cidade"
+				value="#{cidadeBean.cidadesCadastradas}" paginator="true" rows="10"
+				emptyMessage="Não existem cidades cadastradas."
+				paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
+				rowsPerPageTemplate="5,10,15,20,25,30,35,40,45,50">
 
-					<p:column headerText="Cidade" style="width:30%">
-						<h:outputText value="#{cidade.nome}" />
-					</p:column>
-					<p:column headerText="Estado" style="width:30%">
-						<h:outputText value="#{cidade.estado.nome}" />
-					</p:column>
-					<p:column headerText="Pais" style="width:30%">
-						<h:outputText value="#{cidade.estado.pais.nome}" />
-					</p:column>
-					<p:column style="width:10%;text-align: center;" headerText="Ação">
-						<p:commandButton id="selectButton" update=":form:panel"
-							actionListener="#{cidadeBean.prepararAlterarCidade(cidade)}"
-							icon="ui-icon-pencil" title="View">
-						</p:commandButton>
-					</p:column>
-				</p:dataTable>
-			</h:form>
-			<h:form prependId="false">
-				<p:commandButton id="limparButton"
-					actionListener="#{cidadeBean.prepararNovaCidade}"
-					style="display:none" update=":form:panel,:growl" value="Limpar"></p:commandButton>
-			</h:form>
-		</ui:define>
-	</ui:composition>
+				<p:column headerText="Cidade" style="width:30%">
+					<h:outputText value="#{cidade.nome}" />
+				</p:column>
+				<p:column headerText="Estado" style="width:30%">
+					<h:outputText value="#{cidade.estado.nome}" />
+				</p:column>
+				<p:column headerText="Pais" style="width:30%">
+					<h:outputText value="#{cidade.estado.pais.nome}" />
+				</p:column>
+				<p:column style="width:10%;text-align: center;" headerText="Ação">
+					<p:commandButton id="selectButton" update=":form:panel"
+						actionListener="#{cidadeBean.prepararAlterarCidade(cidade)}"
+						icon="ui-icon-pencil" title="View">
+					</p:commandButton>
+				</p:column>
+			</p:dataTable>
+		</h:form>
+		<h:form prependId="false">
+			<p:commandButton id="limparButton"
+				actionListener="#{cidadeBean.prepararNovaCidade}"
+				style="display:none" update=":form:panel,:growl" value="Limpar"></p:commandButton>
+			<p:commandButton id="listarLocaisButton"
+				actionListener="#{cidadeBean.prepararListagemPais}"
+				style="display:none" update=":form:panel,:growl" value="Limpar"></p:commandButton>
+		</h:form>
+		<script>
+			$(document).ready(function() {
+				$("#listarLocaisButton").click();
+			});
+		</script>
+	</ui:define>
 </ui:composition>
 </html>
