--- a/WebContent/pessoa/locador/index.xhtml
+++ b/WebContent/pessoa/locador/index.xhtml
@@ -6,187 +6,188 @@
 	xmlns:f="http://java.sun.com/jsf/core"
 	xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:p="http://primefaces.org/ui">
-<f:metadata>  
-    <f:event type="preRenderView" listener="#{locadorBean.criarListagens}"/>  
-</f:metadata>  	
 <ui:composition template="/template/masterTemplate.xhtml">
-	<ui:composition template="/template/masterTemplate.xhtml">
-		<ui:param name="pageTitle" value="Gerenciar Locadores"></ui:param>
-		<ui:define name="content">
-			<p:panel id="panel" header="Registro" toggleable="true">
-				<h:form id="form">
-					<p:fieldset legend="Pessoa" toggleable="true" toggleSpeed="500">
-						<h:panelGrid columns="2" cellpadding="10">
-							<h:outputText value="Nome:"></h:outputText>
-							<h:panelGroup>
-								<p:inputText id="nome" label="nome" size="40" required="true"
-									requiredMessage="Por favor, insira o nome."
-									value="#{locadorBean.locadorSelecionado.nome}">
-								</p:inputText>
-							</h:panelGroup>
-							<h:outputText value="RG:"></h:outputText>
-							<h:panelGroup>
-								<p:inputText id="rg" label="nome" size="40" required="true"
-									requiredMessage="Por favor, insira o rg."
-									value="#{locadorBean.locadorSelecionado.rg}">
-								</p:inputText>
-							</h:panelGroup>
-							<h:outputText value="Telefone:"></h:outputText>
-							<h:panelGroup>
-								<p:inputText id="telefone" label="nome" size="40"
-									required="true" requiredMessage="Por favor, insira o telefone."
-									value="#{locadorBean.locadorSelecionado.telefone}">
-								</p:inputText>
-							</h:panelGroup>
-						</h:panelGrid>
-					</p:fieldset>
-					<br />
-					<p:fieldset legend="Endereço" toggleable="true" toggleSpeed="500">
-						<h:panelGrid columns="2" cellpadding="10">
-							<h:outputText value="Rua:"></h:outputText>
-							<h:panelGroup>
-								<p:inputText id="rua" label="nome" size="40" required="true"
-									requiredMessage="Por favor, insira a rua."
-									value="#{locadorBean.locadorSelecionado.endereco.rua}">
-								</p:inputText>
-							</h:panelGroup>
-							<h:outputText value="Cep:"></h:outputText>
-							<h:panelGroup>
-								<p:inputText id="cep" label="cep" size="40" required="true"
-									requiredMessage="Por favor, insira o cep."
-									value="#{locadorBean.locadorSelecionado.endereco.cep}">
-								</p:inputText>
-							</h:panelGroup>
-							<h:outputText value="Numero:"></h:outputText>
-							<h:panelGroup>
-								<p:inputText id="numero" label="numero" size="40"
-									required="true" requiredMessage="Por favor, insira o numero."
-									value="#{locadorBean.locadorSelecionado.endereco.numero}">
-								</p:inputText>
-							</h:panelGroup>
-							<h:outputText value="Bairro:"></h:outputText>
-							<h:panelGroup>
-								<p:inputText id="bairro" label="bairro" size="40"
-									required="true" requiredMessage="Por favor, insira o bairro."
-									value="#{locadorBean.locadorSelecionado.endereco.bairro}">
-								</p:inputText>
-							</h:panelGroup>
-							<h:outputText value="Complemento:"></h:outputText>
-							<p:inputTextarea autoResize="false" rows="10" cols="60"
-								value="#{locadorBean.locadorSelecionado.endereco.complemento}"></p:inputTextarea>
-							<h:outputText value="Pais:"></h:outputText>
-							<p:selectOneMenu id="pais"
-								value="#{locadorBean.enderecoBean.paisSelecionado}"
-								required="true">
-								<f:selectItems value="#{locadorBean.enderecoBean.listaPais}" />
-								<p:ajax update="estado"
-									listener="#{locadorBean.enderecoBean.valueChangePais}"
-									event="change" />
-								<p:ajax update="cidade" event="change" />
-								<p:ajax update="cidade" event="change" />
-							</p:selectOneMenu>
-							<h:outputText value="Estado:"></h:outputText>
-							<p:selectOneMenu id="estado" required="true"
-								value="#{locadorBean.enderecoBean.estadoSelecionado}">
-								<f:selectItems value="#{locadorBean.enderecoBean.listaEsdados}" />
-								<p:ajax update="cidade"
-									listener="#{locadorBean.enderecoBean.valueChangeEstado}"
-									event="change" />
-							</p:selectOneMenu>
-							<h:outputText value="Cidade:"></h:outputText>
-							<p:selectOneMenu id="cidade" required="true"
-								value="#{locadorBean.enderecoBean.cidadeSelecionada}">
-								<f:selectItems value="#{locadorBean.enderecoBean.listaCidades}" />
-							</p:selectOneMenu>
-						</h:panelGrid>
-					</p:fieldset>
-					<br></br>
+	<ui:param name="pageTitle" value="Gerenciar Locadores"></ui:param>
+	<ui:define name="content">
+		<p:panel id="panel" header="Registro" toggleable="true">
+			<h:form id="form">
+				<p:fieldset legend="Pessoa" toggleable="true" toggleSpeed="500">
 					<h:panelGrid columns="2" cellpadding="10">
-						<p:commandButton value="Salvar" update=":grid,:form,:growl"
-							actionListener="#{locadorBean.salvarLocador}"></p:commandButton>
-						<p:commandButton
-							onclick="document.getElementById('limparButton').click()"
-							value="Limpar"></p:commandButton>
+						<h:outputText value="Nome:"></h:outputText>
+						<h:panelGroup>
+							<p:inputText id="nome" label="nome" size="40" required="true"
+								requiredMessage="Por favor, insira o nome."
+								value="#{locadorBean.locadorSelecionado.nome}">
+							</p:inputText>
+						</h:panelGroup>
+						<h:outputText value="RG:"></h:outputText>
+						<h:panelGroup>
+							<p:inputText id="rg" label="nome" size="40" required="true"
+								requiredMessage="Por favor, insira o rg."
+								value="#{locadorBean.locadorSelecionado.rg}">
+							</p:inputText>
+						</h:panelGroup>
+						<h:outputText value="Telefone:"></h:outputText>
+						<h:panelGroup>
+							<p:inputText id="telefone" label="nome" size="40" required="true"
+								requiredMessage="Por favor, insira o telefone."
+								value="#{locadorBean.locadorSelecionado.telefone}">
+							</p:inputText>
+						</h:panelGroup>
 					</h:panelGrid>
-				</h:form>
-				<br style="clear: both;" />
-			</p:panel>
-			<br />
-			<br />
-			<h:form id="grid">
-				<p:dataTable id="listagem" var="locador"
-					value="#{locadorBean.locadoresCadastrados}" paginator="true"
-					rows="10" emptyMessage="Não existem locadores cadastrados."
-					paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
-					rowsPerPageTemplate="5,10,15,20,25,30,35,40,45,50">
-					<p:column headerText="Nome" style="width:90%">
-						<h:outputText value="#{locador.nome}" />
-					</p:column>
-					<p:column style="width:10%;text-align: center;" headerText="Ação">
-						<p:commandButton id="selectButtonEdit" update=":form"
-							actionListener="#{locadorBean.selecionarLocador(locador.id)}"
-							icon="ui-icon-pencil" title="View"></p:commandButton>
-						<p:commandButton id="selectButtonView" update=":grid:display"
-							oncomplete="locadorDialog.show()" icon="ui-icon-search"
-							actionListener="#{locadorBean.selecionarDetalhe(locador.id)}"
-							title="View">
-						</p:commandButton>
-					</p:column>
-				</p:dataTable>
-				<p:dialog header="Detalhes" widgetVar="locadorDialog"
-					resizable="false" id="carDlg" showEffect="fade"
-					hideEffect="explode" modal="true">
-					<p:accordionPanel id="display" multiple="true">
-						<p:tab title="Pessoa">
-							<h:panelGrid columns="2" cellpadding="10" style="margin:0 auto;">
-								<h:outputText value="Nome:" />
-								<h:outputText value="#{locadorBean.locadorDetalhe.nome}" />
-
-								<h:outputText value="RG:" />
-								<h:outputText value="#{locadorBean.locadorDetalhe.rg}" />
-
-								<h:outputText value="Telefone:" />
-								<h:outputText value="#{locadorBean.locadorDetalhe.telefone}" />
-							</h:panelGrid>
-						</p:tab>
-						<p:tab title="Endereço">
-							<h:panelGrid columns="2" cellpadding="10">
-								<h:outputText value="Bairro:" />
-								<h:outputText
-									value="#{locadorBean.locadorDetalhe.endereco.bairro}" />
-
-								<h:outputText value="CEP:" />
-								<h:outputText value="#{locadorBean.locadorDetalhe.endereco.cep}" />
-
-								<h:outputText value="Numero:" />
-								<h:outputText
-									value="#{locadorBean.locadorDetalhe.endereco.numero}" />
-
-								<h:outputText value="Rua:" />
-								<h:outputText value="#{locadorBean.locadorDetalhe.endereco.rua}" />
-
-								<h:outputText value="Cidade:" />
-								<h:outputText
-									value="#{locadorBean.locadorDetalhe.endereco.cidade.nome}" />
-
-								<h:outputText value="Estado:" />
-								<h:outputText
-									value="#{locadorBean.locadorDetalhe.endereco.cidade.estado.nome}" />
-
-								<h:outputText value="Pais:" />
-								<h:outputText
-									value="#{locadorBean.locadorDetalhe.endereco.cidade.estado.pais.nome}" />
-							</h:panelGrid>
-						</p:tab>
-					</p:accordionPanel>
-				</p:dialog>
+				</p:fieldset>
+				<br />
+				<p:fieldset legend="Endereço" toggleable="true" toggleSpeed="500">
+					<h:panelGrid columns="2" cellpadding="10">
+						<h:outputText value="Rua:"></h:outputText>
+						<h:panelGroup>
+							<p:inputText id="rua" label="nome" size="40" required="true"
+								requiredMessage="Por favor, insira a rua."
+								value="#{locadorBean.locadorSelecionado.endereco.rua}">
+							</p:inputText>
+						</h:panelGroup>
+						<h:outputText value="Cep:"></h:outputText>
+						<h:panelGroup>
+							<p:inputText id="cep" label="cep" size="40" required="true"
+								requiredMessage="Por favor, insira o cep."
+								value="#{locadorBean.locadorSelecionado.endereco.cep}">
+							</p:inputText>
+						</h:panelGroup>
+						<h:outputText value="Numero:"></h:outputText>
+						<h:panelGroup>
+							<p:inputText id="numero" label="numero" size="40" required="true"
+								requiredMessage="Por favor, insira o numero."
+								value="#{locadorBean.locadorSelecionado.endereco.numero}">
+							</p:inputText>
+						</h:panelGroup>
+						<h:outputText value="Bairro:"></h:outputText>
+						<h:panelGroup>
+							<p:inputText id="bairro" label="bairro" size="40" required="true"
+								requiredMessage="Por favor, insira o bairro."
+								value="#{locadorBean.locadorSelecionado.endereco.bairro}">
+							</p:inputText>
+						</h:panelGroup>
+						<h:outputText value="Complemento:"></h:outputText>
+						<p:inputTextarea autoResize="false" rows="10" cols="60"
+							value="#{locadorBean.locadorSelecionado.endereco.complemento}"></p:inputTextarea>
+						<h:outputText value="Pais:"></h:outputText>
+						<p:selectOneMenu id="pais"
+							value="#{locadorBean.enderecoBean.paisSelecionado}"
+							required="true">
+							<f:selectItems value="#{locadorBean.enderecoBean.listaPais}" />
+							<p:ajax update="estado,cidades"
+								listener="#{locadorBean.enderecoBean.valueChangePais}"
+								event="change" />
+						</p:selectOneMenu>
+						<h:outputText value="Estado:"></h:outputText>
+						<p:selectOneMenu id="estado" required="true"
+							value="#{locadorBean.enderecoBean.estadoSelecionado}">
+							<f:selectItems value="#{locadorBean.enderecoBean.listaEsdados}" />
+							<p:ajax update="cidades"
+								listener="#{locadorBean.enderecoBean.valueChangeEstado}"
+								event="change" />
+						</p:selectOneMenu>
+						<h:outputText value="Cidade:"></h:outputText>
+						<p:selectOneMenu id="cidades" required="true"
+							value="#{locadorBean.enderecoBean.cidadeSelecionada}">
+							<f:selectItems value="#{locadorBean.enderecoBean.listaCidades}" />
+						</p:selectOneMenu>
+					</h:panelGrid>
+				</p:fieldset>
+				<br></br>
+				<h:panelGrid columns="2" cellpadding="10">
+					<p:commandButton value="Salvar" update=":grid,:form,:growl"
+						actionListener="#{locadorBean.salvarLocador}"></p:commandButton>
+					<p:commandButton
+						onclick="document.getElementById('limparButton').click()"
+						value="Limpar"></p:commandButton>
+				</h:panelGrid>
 			</h:form>
-			<h:form prependId="false">
-				<p:commandButton id="limparButton" style="display:none"
-					actionListener="#{locadorBean.prepararNovoLocador}"
-					update=":form,:growl" value="Limpar"></p:commandButton>
-			</h:form>
-		</ui:define>
-	</ui:composition>
+			<br style="clear: both;" />
+		</p:panel>
+		<br />
+		<br />
+		<h:form id="grid">
+			<p:dataTable id="listagem" var="locador"
+				value="#{locadorBean.locadoresCadastrados}" paginator="true"
+				rows="10" emptyMessage="Não existem locadores cadastrados."
+				paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
+				rowsPerPageTemplate="5,10,15,20,25,30,35,40,45,50">
+				<p:column headerText="Nome" style="width:90%">
+					<h:outputText value="#{locador.nome}" />
+				</p:column>
+				<p:column style="width:10%;text-align: center;" headerText="Ação">
+					<p:commandButton id="selectButtonEdit" update=":form"
+						actionListener="#{locadorBean.selecionarLocador(locador.id)}"
+						icon="ui-icon-pencil" title="View"></p:commandButton>
+					<p:commandButton id="selectButtonView" update=":grid:display"
+						oncomplete="locadorDialog.show()" icon="ui-icon-search"
+						actionListener="#{locadorBean.selecionarDetalhe(locador.id)}"
+						title="View">
+					</p:commandButton>
+				</p:column>
+			</p:dataTable>
+			<p:dialog header="Detalhes" widgetVar="locadorDialog"
+				resizable="false" id="carDlg" showEffect="fade" hideEffect="explode"
+				modal="true">
+				<p:accordionPanel id="display" multiple="true">
+					<p:tab title="Pessoa">
+						<h:panelGrid columns="2" cellpadding="10" style="margin:0 auto;">
+							<h:outputText value="Nome:" />
+							<h:outputText value="#{locadorBean.locadorDetalhe.nome}" />
+
+							<h:outputText value="RG:" />
+							<h:outputText value="#{locadorBean.locadorDetalhe.rg}" />
+
+							<h:outputText value="Telefone:" />
+							<h:outputText value="#{locadorBean.locadorDetalhe.telefone}" />
+						</h:panelGrid>
+					</p:tab>
+					<p:tab title="Endereço">
+						<h:panelGrid columns="2" cellpadding="10">
+							<h:outputText value="Bairro:" />
+							<h:outputText
+								value="#{locadorBean.locadorDetalhe.endereco.bairro}" />
+
+							<h:outputText value="CEP:" />
+							<h:outputText value="#{locadorBean.locadorDetalhe.endereco.cep}" />
+
+							<h:outputText value="Numero:" />
+							<h:outputText
+								value="#{locadorBean.locadorDetalhe.endereco.numero}" />
+
+							<h:outputText value="Rua:" />
+							<h:outputText value="#{locadorBean.locadorDetalhe.endereco.rua}" />
+
+							<h:outputText value="Cidade:" />
+							<h:outputText
+								value="#{locadorBean.locadorDetalhe.endereco.cidade.nome}" />
+
+							<h:outputText value="Estado:" />
+							<h:outputText
+								value="#{locadorBean.locadorDetalhe.endereco.cidade.estado.nome}" />
+
+							<h:outputText value="Pais:" />
+							<h:outputText
+								value="#{locadorBean.locadorDetalhe.endereco.cidade.estado.pais.nome}" />
+						</h:panelGrid>
+					</p:tab>
+				</p:accordionPanel>
+			</p:dialog>
+		</h:form>
+		<h:form prependId="false">
+			<p:commandButton id="limparButton" style="display:none"
+				actionListener="#{locadorBean.prepararNovoLocador}"
+				update=":form,:growl" value="Limpar"></p:commandButton>
+			<p:commandButton id="listarButton" style="display:none"
+				actionListener="#{locadorBean.criarListagens}" update=":form"
+				value="Listar"></p:commandButton>
+		</h:form>
+		<script>
+			$(document).ready(function() {
+				$("#listarButton").click();
+			});
+		</script>
+	</ui:define>
 </ui:composition>
 </html>
