apresentação do projeto da faculdade

--- a/WebContent/emprestimo/index.xhtml
+++ b/WebContent/emprestimo/index.xhtml
@@ -177,7 +177,7 @@
 		<h:form prependId="false">
 			<p:commandButton id="prepararListagem" update=":form"
 				actionListener="#{emprestimoBean.prepararListagens}"
-				style="display:nomne">
+				style="display:none">
 			</p:commandButton>
 		</h:form>
 		<script>
