--- a/WebContent/index.xhtml
+++ b/WebContent/index.xhtml
@@ -3,10 +3,22 @@
 	xmlns:ui="http://java.sun.com/jsf/facelets"
 	xmlns:f="http://java.sun.com/jsf/core"
 	xmlns:h="http://java.sun.com/jsf/html">
- <body>
- 	<ui:composition template="/template/masterTemplate.xhtml">
- 		<ui:param name="pageTitle" value="Teste"></ui:param>
- 		<ui:define name="content">ZZZZZZZZZZZZZZZZZZZZZZZZ</ui:define>
- 	</ui:composition>
- </body>
- </html>
+<body>
+	<ui:composition template="/template/masterTemplate.xhtml">
+		<ui:param name="pageTitle" value=""></ui:param>
+		<ui:define name="content">
+			<h1>Projeto Web da disciplina Linguagem de Programação 3</h1>
+			<br />
+			<p>
+				<b>Grupo:</b>
+			</p>
+			<ul>
+				<li><b>Felipe Henriques</b></li>
+				<li><b>Felipe Mascarenhas</b></li>
+				<li><b>Felipe Roque</b></li>
+				<li><b>Pedro Victor</b></li>
+			</ul>
+		</ui:define>
+	</ui:composition>
+</body>
+</html>
